--- a/LAB2.Rmd
+++ b/LAB2.Rmd
@@ -173,7 +173,7 @@ For this exercise we will set up a simpler density-dependent growth model in Ins
 
 3b. Return the initial abundance to 10. Now start adjusting the value of *Max Growth Rate*. What do you notice as the maximum growth rate increases? Focus on the time series of population abundance over time. Can you identify different major changes in your 'abundance over time' plots as the growth rate increases from 1 to 5? You should be able to identify _at least_ four unique patterns of population dynamics! Describe the patterns and the approximate thresholds at which change-overs occur from one pattern to the next. One of these patterns is known as **Chaos** (yes, that is the technical name)!! Can you figure out which pattern is known as chaos?? Provide *four plots* -- one that illustrates each of the four unique patterns you identified. 
 
-**NOTE**: remember to copy the URL for your Insight, insert the URL in the appropriate place on Top Hat. And don't make any more changes to this insight once you have submitted it (clone it if you want to keep making changes)!
+3c. Please share the URL for your Insight: save your model as a 'Public Insight' and insert the URL into Top Hat in the appropriate place. And don't make any more changes to this insight once you have submitted it (use a 'cloned' version if you want to keep making changes)! 
 
 
 ## Checklist for Lab 2 completion
@@ -199,6 +199,7 @@ Your lab answers and pertinent figures, tables and InsightMaker links (make sure
     +  **Exercise 3**
         -  *Short answer (3a.)*
         -  *Short answer and four plots (3b.)*
+        -  *InsightMaker link (3c.)*
         
 
 
