--- a/LECTURE5.Rmd
+++ b/LECTURE5.Rmd
@@ -17,17 +17,18 @@ knitr::opts_chunk$set(echo = TRUE, cache = TRUE)
 
 ![](prairie_dogs3.jpg)
 
+In the last lecture, we talked about how density-dependent feedbacks can help to regulate population densities over time. This is a negative feedback, and often termed 'negative density dependence'. 
+
 What happens if density dependence goes the other way? What if an increase in density produces an *increase* in the population growth rate *r* (a positive feedback)? 
 
 Imagine a very social species, like the prairie dogs pictured above. If the density of prairie dogs is high, they can warn each other about predators. If the density is low, the predation rate might go up, resulting in higher *d*. This is a positive feedback, and can result in, well, you should simulate it for yourself! But remember, positive feedbacks generally result in unstable or non-regulated systems (audio feedback, avalanches, etc)!
 
 This effect -- whereby population growth rate may **decrease** when population size decreases -- is called an **Allee effect**, named after ecologist [Warder Clyde Allee](https://en.wikipedia.org/wiki/Warder_Clyde_Allee) (1885-1955). Allee specialized in social behavior and aggregations, and recognized the benefits of social aggregations to individual fitness.
 
-Interestingly, Warder Allee's interest in cooperation and the benefits of social aggregations spilled over into his life in other ways. He was a devout Quaker, an anti-war activist and an advocate of social cooperation in humans! From the Wikipedia article: "Allee saw ecologists as 'social healers' who were able to provide a naturalistic foundation for ethics through their research"
+Interestingly, Warder Allee's interest in cooperation and the benefits of social aggregations spilled over into his life in other ways. He was a devout Quaker, an anti-war activist and an advocate of human social cooperation! From the Wikipedia article: "Allee saw ecologists as 'social healers' who were able to provide a naturalistic foundation for ethics through their research"
 
 
 ![](Allee1.jpg)
-
 
 
 One of the most famous examples of a possible Allee effect involves the passenger pigeon (*Ectopistes migratorius*).  
@@ -47,7 +48,7 @@ What happened to the passenger pigeon? Well, first of all pigeons were hunted on
 
 Secondly, hardwood forests (primary food source for pigeons was mast from hardwood trees) were cleared on a massive scale, reducing habitat.   
 
-But what do passenger pigeons have to do with the Allee effect? Well, they were an *extremely* gregarious species. Once their numbers dwindled (due to hunting and clearcutting) their social systems broke down, and they could no longer effectively reproduce or avoid predators.   
+But what do passenger pigeons have to do with the Allee effect? Well, they were an *extremely* gregarious species. Once their numbers dwindled (due to hunting and clearcutting) one hypothesis is that their social systems broke down, and they could no longer effectively reproduce or protect themselves from predators.   
 
 ## In-class exercise: Allee effect
 
